kube-registry.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kube-registry
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kube-registry
  name: kube-registry
  namespace: kube-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kube-registry
  template:
    metadata:
      labels:
        app: kube-registry
    spec:
      containers:
      - image: docker.io/opensuse/registry
        name: registry
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: kube-registry
  name: kube-registry
  namespace: kube-registry
spec:
  ports:
  - port: 5000
    protocol: TCP
    nodePort: 30500
  selector:
    app: kube-registry
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-ingress
  namespace: kube-registry
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: registry.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-registry
            port:
              number: 30500
              
kubectl apply -f kube-registry.yaml---
apiVersion: v1
kind: Namespace
metadata:
  name: kube-registry
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kube-registry
  name: kube-registry
  namespace: kube-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kube-registry
  template:
    metadata:
      labels:
        app: kube-registry
    spec:
      containers:
      - image: docker.io/opensuse/registry
        name: registry
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: kube-registry
  name: kube-registry
  namespace: kube-registry
spec:
  ports:
  - port: 5000
    protocol: TCP
    nodePort: 30500
  selector:
    app: kube-registry
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-ingress
  namespace: kube-registry
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: registry.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-registry
            port:
              number: 30500
